fixed checkboxes and made them accessible on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -397,10 +397,79 @@ a:visited{
         margin: 6px 20px;
       }
       #checkboxes{
+        display: flex;
+        justify-content: center;
         padding-bottom: 38px;
         border-bottom: 1px solid #ececec;
         margin-bottom: 25px;
       }
+      .row{
+        display: inherit;
+      }
+
+      /* Adapted from W3Schools */
+
+        /* Customize the label (the container) */
+        .container {
+          display: block;
+          position: relative;
+          padding-left: 25px;
+          margin-bottom: 12px;
+          cursor: pointer;
+          font-size: 22px;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
+        }
+
+        /* Hide the browser's default checkbox */
+        .container input {
+          position: absolute;
+          opacity: 0;
+          cursor: pointer;
+        }
+
+        /* Create a custom checkbox */
+        .checkmark {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 15px;
+          width: 15px;
+          background-color: linear-gradient(#cbcbcb, #e2e2e2);
+          border: 1px solid #cbcbcb;
+          border-radius: 3px;
+        }
+
+        /* When the checkbox is checked, make background white */
+        .container input:checked ~ .checkmark {
+          background-color: #fff;
+        }
+
+        /* Create the checkmark/indicator (hidden when not checked) */
+        .checkmark:after {
+          content: "";
+          position: absolute;
+          display: none;
+        }
+
+        /* Show the checkmark when checked */
+        .container input:checked ~ .checkmark:after {
+          display: block;
+        }
+
+        /* Style the checkmark/indicator */
+        .container .checkmark:after {
+          left: 0;
+          top: -6px;
+          width: 22px;
+          height: 21px;
+          background-image: URL(../img/check.png);
+          overflow: visible;
+        }
+      /* End Adapted from W3Schools */
+
       .soc-med{
         border-radius: 4px;
         padding: 1px 11px 2px 8px;
@@ -611,7 +680,7 @@ a:visited{
       margin-bottom: 20px;
       background: #ececec;
       display: grid;
-      grid-template-rows: 150px 600px 1200px 580px;
+      grid-template-rows: 150px 600px 1410px 580px;
       grid-template-areas: 
       'anno'
       'task'
@@ -758,9 +827,47 @@ a:visited{
       }
       #checkboxes{
         margin: 0 2px 25px 2px;
+        flex-direction: column;
+        justify-content: flex-start;
+      }
+      .row{
+        display: flex;
+        justify-content: center;
+        margin: 20px 0;
+        max-width: 95vw;
+      }
+      .container{
+      }
+      #checkboxes{
+        display: flex;
+        justify-content: center;
+        padding-bottom: 38px;
+        border-bottom: 1px solid #ececec;
+        margin-bottom: 25px;
+      }
+      .container {
+        padding-left: 50px;
+        margin-bottom: 24px;
+        font-size: 44px;
+      }
+      .checkmark {
+        top: 0;
+        left: 0;
+        height: 30px;
+        width: 30px;
+        border: 2px solid #cbcbcb;
+        border-radius: 6px;
+      }
+      .container .checkmark:after {
+        left: 11px;
+        top: -1px;
+        transform: scale(2);
       }
       .soc-med{
-        padding: 1px 2px 2px 2px;
+        border-radius: 8px;
+        padding: 2px 22px 4px 16px;
+        font-size: 1.4em;
+        margin-right: 24px;
       }
     /* End Graphs */
 
